# Copyright © 2024-2025 Apple Inc. and the Pkl project authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")

exports_files([
    ".bazelversion",
])

gazelle_binary(
    name = "gazelle_bin",
    languages = DEFAULT_LANGUAGES,
)

gazelle(
    name = "gazelle",
    gazelle = "gazelle_bin",
)

filegroup(
    name = "workspace_files",
    srcs = [
        "BUILD.bazel",
        "MODULE.bazel",
        "WORKSPACE",
        "//pkl:all_files",
        "//pkl/extensions:all_files",
        "//pkl/private:all_files",
        "//pkl/private/org/pkl_lang/bazel/symlinks:all_files",
    ],
    visibility = ["//tests/integration_tests:__subpackages__"],
)

buildifier(
    name = "buildifier",
    exclude_patterns = [
        "./.git/*",
        "./.ijwb/*",
    ],
    lint_mode = "warn",
    mode = "check",
)
