load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("//pkl:defs.bzl", "pkl_eval", "pkl_library", "pkl_test")

pkl_library(
    name = "circleci",
    srcs = ["config.pkl"],
)

pkl_eval(
    name = "config",
    srcs = ["config.pkl"],
    no_cache = True,
)

pkl_test(
    name = "bazel_version_test",
    srcs = [
        "bazel_version_test.pkl",
    ],
    data = ["//:.bazelversion"],
    no_cache = True,
    properties = {
        "bazelVersionPath": "$(location //:.bazelversion)",
    },
    deps = [":circleci"],
)

write_source_files(
    name = "write_config",
    files = {
        "config.yml": ":config",
    },
)
