# Copyright © 2024-2025 Apple Inc. and the Pkl project authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_jvm_external//:defs.bzl", "artifact")
load(":defs.bzl", "pkl_codegen_java_toolchain", "pkl_doc_toolchain", "pkl_toolchain")

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = [
        "//:__pkg__",
        "//tests/integration_tests:__subpackages__",
    ],
)

exports_files(["defs.bzl"])

alias(
    name = "pkl",
    actual = select({
        "@bazel_tools//src/conditions:darwin_arm64": "@pkl-cli-macos-aarch64//file:downloaded",
        "@bazel_tools//src/conditions:darwin_arm64e": "@pkl-cli-macos-aarch64//file:downloaded",
        "@bazel_tools//src/conditions:darwin_x86_64": "@pkl-cli-macos-amd64//file:downloaded",
        "@bazel_tools//src/conditions:linux_aarch64": "@pkl-cli-linux-aarch64//file:downloaded",
        "@bazel_tools//src/conditions:linux_x86_64": "@pkl-cli-linux-amd64//file:downloaded",
    }),
    visibility = ["//visibility:public"],
)

alias(
    name = "pkl_doc_cli",
    actual = select({
        "@bazel_tools//src/conditions:darwin_arm64": "@pkl-doc-cli-macos-aarch64//file:downloaded",
        "@bazel_tools//src/conditions:darwin_arm64e": "@pkl-doc-cli-macos-aarch64//file:downloaded",
        "@bazel_tools//src/conditions:darwin_x86_64": "@pkl-doc-cli-macos-amd64//file:downloaded",
        "@bazel_tools//src/conditions:linux_aarch64": "@pkl-doc-cli-linux-aarch64//file:downloaded",
        "@bazel_tools//src/conditions:linux_x86_64": "@pkl-doc-cli-linux-amd64//file:downloaded",
    }),
)

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

pkl_toolchain(
    name = "pkl_macos_aarch64",
    cli = "@pkl-cli-macos-aarch64//file",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "pkl_toolchain_macos_aarch64",
    exec_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
    ],
    toolchain = ":pkl_macos_aarch64",
    toolchain_type = ":toolchain_type",
)

pkl_toolchain(
    name = "pkl_macos_amd64",
    cli = "@pkl-cli-macos-amd64//file",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "pkl_toolchain_macos_amd64",
    exec_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":pkl_macos_amd64",
    toolchain_type = ":toolchain_type",
)

pkl_toolchain(
    name = "pkl_linux_aarch64",
    cli = "@pkl-cli-linux-aarch64//file",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "pkl_toolchain_linux_aarch64",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
    toolchain = ":pkl_linux_aarch64",
    toolchain_type = ":toolchain_type",
)

pkl_toolchain(
    name = "pkl_linux_amd64",
    cli = "@pkl-cli-linux-amd64//file",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "pkl_toolchain_linux_amd64",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":pkl_linux_amd64",
    toolchain_type = ":toolchain_type",
)

java_binary(
    name = "pkl_cli_java",
    jvm_flags = [
        "-XX:MaxRAMPercentage=80.0",
    ],
    main_class = "org.pkl.cli.Main",
    runtime_deps = [
        artifact(
            "org.pkl-lang:pkl-tools",
            repository_name = "rules_pkl_deps",
        ),
    ],
)

pkl_toolchain(
    name = "pkl_java",
    cli = ":pkl_cli_java",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "pkl_toolchain_java",
    toolchain = ":pkl_java",
    toolchain_type = ":toolchain_type",
)

toolchain_type(
    name = "codegen_toolchain_type",
)

pkl_codegen_java_toolchain(
    name = "pkl_codegen_java",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "pkl_toolchain_codegen_java",
    toolchain = ":pkl_codegen_java",
    toolchain_type = ":codegen_toolchain_type",
)

toolchain_type(
    name = "doc_toolchain_type",
)

pkl_doc_toolchain(
    name = "pkl_doc_macos_aarch64",
    cli = "@pkl-doc-cli-macos-aarch64//file",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "pkl_doc_toolchain_macos_aarch64",
    exec_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
    ],
    toolchain = ":pkl_doc_macos_aarch64",
    toolchain_type = ":doc_toolchain_type",
)

pkl_doc_toolchain(
    name = "pkl_doc_macos_amd64",
    cli = "@pkl-doc-cli-macos-amd64//file",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "pkl_doc_toolchain_macos_amd64",
    exec_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":pkl_doc_macos_amd64",
    toolchain_type = ":doc_toolchain_type",
)

pkl_doc_toolchain(
    name = "pkl_doc_linux_aarch64",
    cli = "@pkl-doc-cli-linux-aarch64//file",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "pkl_doc_toolchain_linux_aarch64",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
    toolchain = ":pkl_doc_linux_aarch64",
    toolchain_type = ":doc_toolchain_type",
)

pkl_doc_toolchain(
    name = "pkl_doc_linux_amd64",
    cli = "@pkl-doc-cli-linux-amd64//file",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "pkl_doc_toolchain_linux_amd64",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":pkl_doc_linux_amd64",
    toolchain_type = ":doc_toolchain_type",
)

bzl_library(
    name = "defs",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
    deps = [
        "//pkl/private:docs",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
        "@rules_java//java/private:proto_support",
    ],
)

java_binary(
    name = "pkl_codegen_java_cli",
    main_class = "org.pkl.codegen.java.Main",
    visibility = [
        "//visibility:public",
    ],
    runtime_deps = [
        artifact(
            "org.pkl-lang:pkl-tools",
            repository_name = "rules_pkl_deps",
        ),
    ],
)
