# Copyright © 2024-2026 Apple Inc. and the Pkl project authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load(":remote_pkl_package_test.bzl", "rewrite_url_test_suite")
load(":repositories_test.bzl", "project_cache_path_and_dependencies_test_suite")

package(default_visibility = ["//visibility:private"])

project_cache_path_and_dependencies_test_suite(
    name = "project_cache_path_and_dependencies_tests",
)

rewrite_url_test_suite(
    name = "rewrite_url_tests",
)
