# Copyright © 2024 Apple Inc. and the Pkl project authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
load("@rules_pkg//pkg:mappings.bzl", "strip_prefix")
load("@rules_pkg//pkg:pkg.bzl", "pkg_tar")
load("@rules_pkl//pkl:defs.bzl", "pkl_eval")

pkl_eval(
    name = "dogs",
    srcs = ["dogs.pkl"],
)

pkl_eval(
    name = "cats",
    srcs = ["cats.pkl"],
    outs = [
        "cats.json",
        "cats.yaml",
    ],
    multiple_outputs = True,
)

#  Collect all outputs of :dogs and :cats targets and `hamster.pcf` into a single target.
filegroup(
    name = "all_pet_files",
    srcs = [
        "hamster.pcf",
        ":cats",
        ":dogs",
    ],
)

# Generates tarball of generated Pkl files.
pkg_tar(
    name = "pets_tarball",
    srcs = [":all_pet_files"],
    # Add tarball files relative to the workspace root (`examples/pets/cats.json`, etc.).
    strip_prefix = strip_prefix.from_root(),
)
