# Copyright © 2024-2025 Apple Inc. and the Pkl project authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_jvm_external//:defs.bzl", "artifact")

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = [
        "//:__pkg__",
        "//tests/integration_tests:__subpackages__",
    ],
)

bzl_library(
    name = "docs",
    srcs = glob(["*.bzl"]),
    visibility = ["//pkl:__subpackages__"],
    deps = [
        "@rules_jvm_external//:implementation",
    ],
)

sh_binary(
    name = "run_pkl_script",
    srcs = ["run_pkl_script.sh"],
    visibility = ["//visibility:public"],
)

# Export the `pkl-config-java` library from the ruleset so it can be used in the default codegen toolchain.
# Rules/macro implementations should not refer to this target directly (otherwise they'll take away the user's ability
# to override it). They can instead inject their own `pkl-config-java` or `pkl-tools` on `pkl_java_library` using `pkl_deps`.
java_library(
    name = "pkl-config-java-internal",
    visibility = ["//visibility:public"],
    exports = [
        artifact(
            "org.pkl-lang:pkl-config-java",
            repository_name = "rules_pkl_deps",
        ),
    ],
)
