# Copyright © 2025 Apple Inc. and the Pkl project authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_pkl//pkl:defs.bzl", "pkl_test")
load("@rules_python//python:defs.bzl", "py_test")

# Sample pkl test for XML generation
pkl_test(
    name = "sample_xml_generator",
    srcs = ["sample_xml_test.pkl"],
)

# Python unittest that runs pkl_test with XML output and validates the XML content
py_test(
    name = "junit_xml_validation_test",
    srcs = ["junit_xml_validation_test.py"],
    data = [":sample_xml_generator"],
    env = {
        "SAMPLE_XML_GENERATOR_PATH": "$(location :sample_xml_generator)",
    },
)
