load("@rules_jvm_external//:defs.bzl", "artifact")
load("//pkl:defs.bzl", "pkl_config_java_library", "pkl_config_src")

pkl_config_src(
    name = "base",
    files = [
        "srcs/base.pkl",
    ],
)

java_library(
    name = "gen_lib",
    srcs = [":base"],
    deps = [artifact(
        "org.pkl-lang:pkl-tools",
        repository_name = "rules_pkl_deps",
    )],
)

java_test(
    name = "litter_test",
    srcs = ["TestPklCodegen.java"],
    resource_strip_prefix = "tests/pkl_codegen_java",
    resources = [
        "srcs/base.pkl",
        "srcs/litter.pkl",
    ],
    test_class = "TestPklCodegen",
    deps = [
        artifact(
            "junit:junit",
            repository_name = "rules_pkl_deps",
        ),
        artifact(
            "org.pkl-lang:pkl-tools",
            repository_name = "rules_pkl_deps",
        ),
        ":gen_lib",
    ],
)

pkl_config_java_library(
    name = "pkl_config_java_lib",
    files = [
        "srcs/base.pkl",
    ],
)
