load("@rules_jvm_external//:defs.bzl", "artifact")
load("@rules_pkl//pkl:defs.bzl", "pkl_java_library")

pkl_java_library(
    name = "base",
    srcs = [
        "srcs/base.pkl",
    ],
)

java_test(
    name = "litter_test",
    srcs = ["TestPklCodegen.java"],
    resource_strip_prefix = "tests/pkl_codegen_java",
    resources = [
        "srcs/base.pkl",
        "srcs/litter.pkl",
    ],
    test_class = "TestPklCodegen",
    deps = [
        artifact(
            "junit:junit",
            repository_name = "rules_pkl_deps",
        ),
        artifact(
            "org.pkl-lang:pkl-tools",
            repository_name = "rules_pkl_deps",
        ),
        ":base",
    ],
)
