# Copyright © 2024-2025 Apple Inc. and the Pkl project authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_java//java:defs.bzl", "java_library", "java_test")
load("@rules_jvm_external//:defs.bzl", "artifact")
load("@rules_pkl//pkl:defs.bzl", "pkl_java_library")

pkl_java_library(
    name = "base",
    srcs = [
        "srcs/base.pkl",
    ],
    module_path = [
        "//tests/pkl_codegen_java/module",
    ],
)

java_library(
    name = "pkl-config-java-internal",
    visibility = ["//visibility:public"],
    exports = [
        artifact(
            "org.pkl-lang:pkl-config-java",
            repository_name = "custom_pkl_java_library_maven_deps",
        ),
    ],
)

java_test(
    name = "litter_test",
    srcs = ["TestPklCodegen.java"],
    resource_strip_prefix = "tests/pkl_codegen_java",
    resources = [
        "srcs/base.pkl",
        "srcs/litter.pkl",
    ],
    test_class = "TestPklCodegen",
    deps = [
        artifact(
            "junit:junit",
            repository_name = "rules_pkl_deps",
        ),
        artifact(
            "org.pkl-lang:pkl-tools",
            repository_name = "rules_pkl_deps",
        ),
        ":base",
    ],
)

java_test(
    name = "polymorphism_test",
    srcs = ["PolymorphismTest.java"],
    resource_strip_prefix = "tests/pkl_codegen_java",
    resources = [
        "srcs/shelter.pkl",
    ],
    test_class = "PolymorphismTest",
    deps = [
        "//tests/pkl_codegen_java/module:animals",
        artifact(
            "junit:junit",
            repository_name = "rules_pkl_deps",
        ),
        artifact(
            "org.pkl-lang:pkl-config-java",
            repository_name = "rules_pkl_deps",
        ),
    ],
)
