# Copyright © 2024-2025 Apple Inc. and the Pkl project authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_jvm_external//:defs.bzl", "artifact")
load("//pkl:defs.bzl", "pkl_doc")

pkl_doc(
    name = "pkl_doc",
    srcs = [
        "srcs/doc-package-info.pkl",
        "srcs/rabbits.pkl",
    ],
)

java_test(
    name = "pkl_doc_test",
    srcs = ["PklDocTest.java"],
    data = [":pkl_doc_docs.zip"],
    test_class = "tests.pkl_doc.PklDocTest",
    deps = [
        "@rules_java//java/runfiles",
        artifact(
            "junit:junit",
            repository_name = "rules_pkl_deps",
        ),
    ],
)
