# Copyright © 2024-2025 Apple Inc. and the Pkl project authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_jvm_external//:defs.bzl", "artifact")
load("//pkl:defs.bzl", "pkl_library")

pkl_library(
    name = "animals",
    srcs = ["srcs/animals.pkl"],
)

pkl_library(
    name = "horse",
    srcs = ["srcs/horse.pkl"],
    deps = [":animals"],
)

filegroup(
    name = "transitive_sources",
    srcs = [":horse"],
    output_group = "pkl_sources",
)

java_test(
    name = "transitive_sources_test",
    srcs = ["TransitiveSourcesTest.java"],
    data = [":transitive_sources"],
    env = {"TRANSITIVE_SOURCES": "$(rlocationpaths :transitive_sources)"},
    test_class = "tests.pkl_library.TransitiveSourcesTest",
    deps = [
        "@rules_java//java/runfiles",
        artifact(
            "junit:junit",
            repository_name = "rules_pkl_deps",
        ),
    ],
)
