# Copyright © 2025 Apple Inc. and the Pkl project authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""
You can check license files with:

```
bazel run //tools/lint/hawkeye -- check --fail-if-unknown
```

You can update header comments with:

```
bazel run //tools/lint/hawkeye -- format --fail-if-unknown
```
"""

alias(
    name = "hawkeye",
    actual = select({
        "@bazel_tools//src/conditions:darwin": "@hawkeye-aarch64-apple-darwin//:hawkeye",
        "@bazel_tools//src/conditions:darwin_x86_64": "@hawkeye-x86_64-apple-darwin//:hawkeye",
        "@bazel_tools//src/conditions:linux_x86_64": "@hawkeye-x86_64-unknown-linux-gnu//:hawkeye",
        "//conditions:default": "@hawkeye-aarch64-apple-darwin//:hawkeye",
    }),
    visibility = ["//visibility:public"],
)
